resources/css/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;


.blockSelect {
    -webkit-user-select: none;
    user-select: none;
    -moz-user-select: none;
    -webkit-user-drag: none;
}


input.inputBox {
    font-size: 22px;
    font-weight: 600;
    padding: 15px 60px;
    color: #006CAA;
    border-radius: 8px;
    border: 3px solid #1C9FE2;
}


.calenderWrap {
    display: flex;
    justify-content: center;
    position: relative;
}

.calendarElement {
    position: absolute;
    transform: translateX(-8.5%) translateY(-2%);
    padding: 20px 30px;
    margin: 20px;
    border-radius: 10px;
    border: 1px solid #ccc;
    z-index: 999;
}

